update imports and readme